--- a/Templates/index.html
+++ b/Templates/index.html
@@ -53,7 +53,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url("templates/images/kazuya side pic.png");
+        background-image: url("./templates/images/kazuya side pic.png");
         background-size: auto 100%;
         background-position: right center;
         background-repeat: no-repeat;
@@ -257,7 +257,7 @@
         left: 0;
         width: 100%;
         height: 70vh;
-        background-image: url("templates/images/kazuya 2nd pic.png");
+        background-image: url("./templates/images/kazuya 2nd pic.png");
         background-size: auto 100%;
         background-position: left bottom;
         background-repeat: no-repeat;
@@ -272,7 +272,7 @@
         right: 0;
         width: 100%;
         height: 50vh;
-        background-image: url("templates/images/virgil 3.png");
+        background-image: url("./templates/images/virgil 3.png");
         background-size: auto 100%;
         background-position: right top;
         background-repeat: no-repeat;
@@ -428,7 +428,7 @@
         position: relative;
         overflow: hidden;
         padding: 60px 20px;
-        background-image: url("templates/images/virgil 4.png");
+        background-image: url("./templates/images/virgil 4.png");
         background-size: cover;
         background-attachment: fixed;
       }
@@ -440,7 +440,7 @@
         left: 0;
         width: 100%;
         height: 70vh;
-        background-image: url("templates/images/dante 1.png");
+        background-image: url("./templates/images/dante 1.png");
         background-size: auto 100%;
         background-position: left bottom;
         background-repeat: no-repeat;
@@ -455,7 +455,7 @@
         right: 0;
         width: 100%;
         height: 50vh;
-        background-image: url("templates/images/virgil 1.png");
+        background-image: url("./templates/images/virgil 1.png");
         background-size: auto 100%;
         background-position: right bottom;
         background-repeat: no-repeat;
@@ -615,7 +615,7 @@
         left: 0;
         width: 100%;
         height: 70vh;
-        background-image: url("templates/images/sparda.png");
+        background-image: url("./templates/images/sparda.png");
         background-size: auto 100%;
         background-position: left bottom;
         background-repeat: no-repeat;
@@ -630,7 +630,7 @@
         right: 0;
         width: 100%;
         height: 50vh;
-        background-image: url("templates/images/kazuya white.png");
+        background-image: url("./templates/images/kazuya white.png");
         background-size: auto 80%;
         background-position: right bottom;
         background-repeat: no-repeat;
