--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1885,7 +1885,7 @@
         content.append("senderName", senderName);
         content.append("messageText", messageText);
         content.append("messageImage", messageImage);
-        const sender = await fetch("http://127.0.0.1:8000/add/", {
+        const sender = await fetch("https://xpanda.pythonanywhere.com/add/", {
           method: "POST",
           headers: {
             "X-CSRFToken": csrftoken,
@@ -1897,7 +1897,7 @@
       });
 
       async function getdata() {
-        const response = await fetch("http://127.0.0.1:8000/getitems/");
+        const response = await fetch("https://xpanda.pythonanywhere.com/getitems/");
         const data = await response.json();
         const content = document.getElementById("contents");
 
