--- a/Templates/index.html
+++ b/Templates/index.html
@@ -696,8 +696,9 @@
       .message-screenshot {
         transition: transform 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         width: 100%;
-        height: auto;
+        height: 100px;
         display: block;
+        object-fit: cover;
       }
 
       .message-item:hover .message-screenshot {
