Implement code changes to enhance functionality and improve performance

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1457,7 +1457,8 @@
         <div class="message-board">
           <h2 class="board-title">HAPPY BIRTHDAY!</h2>
           <p class="board-subtitle">
-            Your friends wanted to share their love (and roast your Kazuya main)
+            Your friends wanted to share their love (and roast your
+            Kazuyagameplay])
           </p>
 
           <div id="contents" class="messages-grid"></div>
@@ -1472,8 +1473,8 @@
     >
       <div style="max-width: 800px; margin: 0 auto">
         <img
-          src="{% static 'design sans titre(1)' %}"
-          alt="Fabio and Dave"
+          src="{% static 'poster.png' %}"
+          alt="poster"
           style="
             max-width: 100%;
             height: auto;
@@ -1489,7 +1490,8 @@
             font-size: 1.2rem;
           "
         >
-          Fabio & Dave - Unc iRA
+          your friends love you so much, and we hope you have the best birthday
+          ever!
         </p>
       </div>
     </section>
