--- a/Templates/index.html
+++ b/Templates/index.html
@@ -258,7 +258,7 @@
         left: 0;
         width: 100%;
         height: 70vh;
-        background-image: url("{% static 'kazuya_side_pic.png' %}");
+        background-image: url("{% static 'kazuya 2nd pic.png' %}");
         background-size: auto 100%;
         background-position: left bottom;
         background-repeat: no-repeat;
